--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   font-family: 'Orbitron', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 main {
   width: 100vw;
   height: 100vh;
@@ -17,14 +21,23 @@ div {
 
 #knowledgePage {
   background-color: aqua;
+  position: relative;
+  right: 100vw;
+  top: 0vh;
 }
 
 #projectsPage {
   background-color: gold;
+  position: relative;
+  right: 0vw;
+  top: 100vh;
 }
 
 #contactPage {
   background-color: tomato;
+  position: relative;
+  right: 100vw;
+  top: 100vh;
 }
 
 h1 {
