--- a/style.css
+++ b/style.css
@@ -21,21 +21,21 @@ div {
 
 #knowledgePage {
   background-color: aqua;
-  position: relative;
+  position: absolute;
   right: 100vw;
   top: 0vh;
 }
 
 #projectsPage {
   background-color: gold;
-  position: relative;
+  position: absolute;
   right: 0vw;
   top: 100vh;
 }
 
 #contactPage {
   background-color: tomato;
-  position: relative;
+  position: absolute;
   right: 100vw;
   top: 100vh;
 }
