--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ main, div {
   height: 100vh;
 }
 
+main::before {
+  content: EXCEEL EX EX EXE TEXTE;
+}
+
 div {
   width: 100vw;
   height: 100vh;
