--- a/style.css
+++ b/style.css
@@ -54,13 +54,15 @@ div {
 }
 
 a {
-  background-color: black;
+  background-color: rgb(68, 67, 67);
   color: white;
   border-radius: 50%;
   width: 5em;
   height: 5em;
-  font-size: 0.5em;
+  font-size: 1em;
   text-decoration: none;
+  text-align: center;
+  align-content: center;
 }
 
 .toTop {
