--- a/style.css
+++ b/style.css
@@ -66,26 +66,26 @@ a {
 
 .toTop {
   position: absolute;
-  left: 50%;
+  left: auto;
   top: 2em;
 }
 
 .toRight {
   position: absolute;
   right: 2em;
-  top: 50%;
+  top: auto;
 }
 
 .toBottom {
   position: absolute;
-  left: 50%;
+  left: auto;
   bottom: 2em;
 }
 
 .toLeft {
   position: absolute;
   left: 2em;
-  top: 50%;
+  top: auto;
 }
 
 h1 {
