--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ main::before, div::before {
   font-weight: 900;
   font-size: 1.5em;
   color: rgb(187, 36, 36);
+  z-index: -10;
 }
 
 .pageContent {
@@ -37,7 +38,7 @@ main::before, div::before {
   margin: auto;
   width: 70vw;
   height: 70vh;
-  z-index: infinite;
+  z-index: 10;
   background-color: azure;
 }
 
