--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main, div {
   position: relative;
 }
 
-main::before, div::before {
+main::before, .background::before {
   content: "EXCEEL EX EX EXE TEXTEEXEXEXEXEXEXEXEEL EX EX EXE TEXTEEXEXEXEXEXEXEXEXEXEXEXEXEXEX EX EX EX EXE EXE EE EX EXEXEXE EXE";
   line-break: anywhere;
   font-weight: 900;
