--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ main::before, .background::before {
 
 .pageContent {
   position: absolute;
+  top: 0;
   left: 0;
-  right: 0;
   margin: auto;
   width: 70vw;
   height: 70vh;
