--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ main::before, .background::before {
   line-break: anywhere;
   font-weight: 900;
   font-size: 1.5em;
-  color: rgb(187, 36, 36);
+  color: rgb(248, 248, 248);
+  color: rgb(225, 227, 233)
   z-index: -10;
 }
 
@@ -41,7 +42,7 @@ main::before, .background::before {
   width: 70vw;
   height: 70vh;
   z-index: 10;
-  background-color: azure;
+  background-color: rgb(102, 153, 204);
   border-radius: 5%;
 }
 
@@ -51,21 +52,18 @@ div {
 }
 
 #knowledgePage {
-  background-color: aqua;
   position: relative;
   left: 100vw;
   top: -100vh;
 }
 
 #projectsPage {
-  background-color: gold;
   position: relative;
   left: 0vw;
   top: -100vh;
 }
 
 #contactPage {
-  background-color: tomato;
   position: relative;
   left: 100vw;
   top: -200vh;
@@ -124,7 +122,6 @@ h1 {
 
 p {
   font-weight: 400;
-  color: whitesmoke;
   margin: 0;
   font-size: 3em;
   text-align: center;
