--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ div {
 }
 
 a {
-  background-color: rgb(68, 67, 67);
-  color: white;
+  background-color: rgb(12, 113, 224);
+  color: rgb(248, 248, 248);;
   border-radius: 50%;
   height: 3em;
   width: 3em;
@@ -117,7 +117,7 @@ h1 {
   font-size: 4em;
   margin: 0;
   text-align: center;
-  color:rgb(10, 10, 25)
+  color: rgb(248, 248, 248);
 }
 
 p {
