--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ main::before, .background::before {
   z-index: 10;
   background-color: rgb(12, 113, 224);
   border-radius: 2em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 /*Add crimson red for Dark Mode*/
 
