--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   overflow: hidden; /* Hide scrollbar */
 }
 
-main, div {
+section {
   width: 100vw;
   height: 100vh;
   position: relative;
@@ -45,11 +45,6 @@ main::before, .background::before {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
 }
 /*Add crimson red for Dark Mode*/
-
-div {
-  width: 100vw;
-  height: 100vh;
-}
 
 #knowledgePage {
   position: relative;
