--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ main, section {
   width: 100vw;
   height: 100vh;
   position: relative;
+  overflow: hidden;
+
 }
 
 .main::before {
@@ -29,7 +31,7 @@ main, section {
   font-weight: 900;
   font-size: 1.5em;
   color: rgb(148, 148, 148);
-  z-index: 10;
+  z-index: -10;
 }
 
 .pageContent {
