--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main, section {
 
 }
 
-.main::before {
+main::before {
   content: "aMUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO XEXEXEXEXEXEXEXEEXEXXEXEXEEXEXEXEXXEEXEXEXXEXEXEXEXEXEXEEXEXEXEEXXEXEXEXEXEXEXEEXEXEXEXXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEEL EX EX EXE TEXTEEXEXEXEXEXEXEXEXEXEXEXEXEXEX EX EX EX EXE EXE EE EX EXEXEXE EXE";
   overflow: hidden;
   line-break: anywhere;
