--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
   font-family: 'Orbitron', sans-serif;
 
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -13,10 +13,12 @@ html {
 }
 
 body {
-  overflow: hidden; /* Hide scrollbar */
+  overflow: hidden;
+  /* Hide scrollbar */
 }
 
-main, section {
+main,
+section {
   width: 100vw;
   height: 100vh;
   position: relative;
@@ -25,11 +27,11 @@ main, section {
 }
 
 .background::before {
-  content: "MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO  MUTCHO TEXTO XEXEXEXEXEXEXEXEEXEXXEXEXEEXEXEXEXXEEXEXEXXEXEXEXEXEXEXEEXEXEXEEXXEXEXEXEXEXEXEEXEXEXEXXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEXEEL EX EX EXE TEXTEEXEXEXEXEXEXEXEXEXEXEXEXEXEX EX EX EX EXE EXE EE EX EXEXEXE EXE";
+  content: repeat("MUTCHO TEXTO MANITO ", 200);
   overflow: hidden;
   line-break: anywhere;
   font-weight: 900;
-  font-size: 1.5vmax;
+  font-size: 3.5vmax;
   color: rgb(245, 245, 245);
   z-index: -10;
 }
@@ -47,6 +49,7 @@ main, section {
   background-color: rgb(12, 113, 224);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
 }
+
 /*Add crimson red for Dark Mode*/
 
 div {
@@ -72,9 +75,12 @@ div {
   top: -200vh;
 }
 
-a {
+.toTop,
+.toRight,
+.toBottom,
+.toLeft {
   background-color: rgb(12, 113, 224);
-  color: rgb(248, 248, 248);;
+  color: rgb(248, 248, 248);
   border-radius: 50%;
   height: 3em;
   width: 3em;
