Repeat don't work for context

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section {
 }
 
 .background::before {
-  content: repeat("MUTCHO TEXTO MANITO ", 200);
+  content: "MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO ";
   overflow: hidden;
   line-break: anywhere;
   font-weight: 900;
