--- a/style.css
+++ b/style.css
@@ -27,11 +27,14 @@ section {
 }
 
 .background::before {
-  content: "MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO MUTCHO TEXTO MANITO ";
+  /* Examine Experience Execute Extend Exceed Expand */
+  /* Exceptional Exquisite Expert Excellence Extraordinary */
+ 
+  content: "EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY ";
   overflow: hidden;
   line-break: anywhere;
   font-weight: 900;
-  font-size: 2.5vmax;
+  font-size: 2vmax;
   color: rgb(245, 245, 245);
   z-index: -10;
 }
@@ -82,9 +85,9 @@ div {
   background-color: rgb(12, 113, 224);
   color: rgb(248, 248, 248);
   border-radius: 50%;
-  height: 3em;
-  width: 3em;
-  font-size: 1em;
+  height: 3vmax;
+  width: 3vmax;
+  font-size: 1vmax;
   text-decoration: none;
   text-align: center;
   padding: 1em;
@@ -126,7 +129,7 @@ div {
 
 h1 {
   font-weight: 900;
-  font-size: 4em;
+  font-size: 4vmax;
   margin: 0;
   text-align: center;
   color: rgb(248, 248, 248);
@@ -135,7 +138,7 @@ h1 {
 p {
   font-weight: 400;
   margin: 0;
-  font-size: 3em;
+  font-size: 3vmax;
   text-align: center;
   color: rgb(248, 248, 248);
 }
