--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ div {
   background-color: rgb(12, 113, 224);
   color: rgb(248, 248, 248);
   border-radius: 50%;
-  height: calc(3vmax * 2vmin);
-  width: calc(3vmax * 2vmin);
+  height: 5vmax;
+  width: 5vmax;
   font-size: 1vmax;
   text-decoration: none;
   text-align: center;
