--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ div {
   font-size: 1vmax;
   text-decoration: none;
   text-align: center;
-  padding: 1em;
+  padding: 1.5vmax;
 
   z-index: 20;
 }
