--- a/style.css
+++ b/style.css
@@ -17,18 +17,34 @@ body {
   /* Hide scrollbar */
 }
 
-img {
+
+#config {
+  content:url(/img/cogConfig.png);
+  position: absolute;
+  z-index: 11;
+  padding: 3vmin;
+  width: 20vmin;
+  height: 20vmin;
+  right: -10vmin;
+  bottom: -10vmin;
+  border-radius: 50%;
+  background-color: lightblue;
+}
+
+/* img {
   position: absolute;
   z-index: 11;
   width: 10vmin;
   right: -5vmin;
   bottom: -5vmin;
 
-}
+} */
 
 svg {
   position: absolute;
   overflow: visible;
+  width: 50vw;
+  height: -250vh;
   z-index: 9;
 }
 
@@ -41,11 +57,13 @@ section {
 
 }
 
+
+
 .background::before {
   /* Examine Experience Execute Extend Exceed Expand */
   /* Exceptional Exquisite Expert Excellence Extraordinary */
 
-  content: "EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXCEPTIONAL EXQUISITE EXPERT EXCELLENCE EXTRAORDINARY ";
+  content: "EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND EXAMINE EXPERIENCE EXECUTE EXTEND EXCEED EXPAND ";
   overflow: hidden;
   line-break: anywhere;
   font-weight: 900;
@@ -65,12 +83,17 @@ section {
   height: 70vh;
   z-index: 10;
   background-color: rgb(12, 113, 224);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 0 2vmin 1vmin rgba(0, 0, 0, 0.7);
+}
+
+.pageContent::before {
+  content: url(/img/dayMode.png);
+  z-index: 11;
 }
 
 /*Add crimson red for Dark Mode*/
 
-div {
+.background {
   width: 100vw;
   height: 100vh;
 }
