--- a/style.css
+++ b/style.css
@@ -113,15 +113,10 @@ section {
 .toRight,
 .toBottom,
 .toLeft {
-  background-color: rgb(12, 113, 224);
-  color: rgb(248, 248, 248);
-  border-radius: 50%;
+  content:url(/img/dayArrow.png);
   height: 5vmax;
   width: 5vmax;
-  font-size: 1vmax;
-  text-decoration: none;
-  text-align: center;
-  padding: 1.5vmax;
+  padding: 0;
 
   z-index: 20;
 }
@@ -132,6 +127,7 @@ section {
   right: 0;
   margin: auto;
   top: 2em;
+  transform: rotate(270deg);
 }
 
 .toRight {
@@ -148,6 +144,7 @@ section {
   right: 0;
   margin: auto;
   bottom: 2em;
+  transform: rotate(90deg);
 }
 
 .toLeft {
@@ -156,6 +153,7 @@ section {
   top: 0;
   bottom: 0;
   margin: auto;
+  transform: rotate(180deg);
 }
 
 h1 {
